security/auth/opa/2-with-google-idp/vs-petclinic-3.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: petclinic
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: default-petclinic-8080
              namespace: gloo-system
    options:
      extauth:
        configRef:
          name: google-oauth-then-opa
          namespace: gloo-system
